# NodeForge

./: CMakeLists.txt  README.md  main.cpp
core/: NodeGraph.cpp  NodeGraph.h
model/: NodeFactory.cpp  NodeFactory.h  NodeModel.h
model/nodes/: AddNode.h  CustomJsNode.h  DivNode.h  MulNode.h  NumberNode.h  StringAddNode.h  StringNode.h  SubNode.h
ui/: MainWindow.cpp  MainWindow.h
ui/dialogs/: CustomNodeDialog.cpp  CustomNodeDialog.h
ui/items/: ConnectionItem.cpp  ConnectionItem.h  NodeItem.cpp  NodeItem.h  PortItem.cpp  PortItem.h
ui/style/: style.qss
ui/views/: NodeScene.cpp  NodeScene.h  NodeView.cpp  NodeView.h
